cierra/tests/snapshots/parser__array.snap
---
source: tests/parser.rs
expression: ast
---
Taurus {
    defs: [
        Func(
            FuncDef {
                name: "fun",
                contract: Contract {
                    requires: [
                        Con(
                            Length {
                                base: "a",
                                start: 0,
                                end: Ident(
                                    "len",
                                ),
                            },
                            Cmp(
                                Cmp(
                                    Ge,
                                    ArithTerm(
                                        Ident(
                                            "len",
                                        ),
                                    ),
                                    Const(
                                        Int(
                                            2,
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ],
                    ensures: [
                        Cmp(
                            Cmp(
                                Eq,
                                ArithTerm(
                                    Res,
                                ),
                                Binary(
                                    Plus,
                                    Binary(
                                        Plus,
                                        ArrAccess {
                                            array: Ident(
                                                "a",
                                            ),
                                            idx: Const(
                                                Int(
                                                    0,
                                                ),
                                            ),
                                        },
                                        ArrAccess {
                                            array: Ident(
                                                "a",
                                            ),
                                            idx: Const(
                                                Int(
                                                    1,
                                                ),
                                            ),
                                        },
                                    ),
                                    ArrAccess {
                                        array: Ident(
                                            "a",
                                        ),
                                        idx: Const(
                                            Int(
                                                2,
                                            ),
                                        ),
                                    },
                                ),
                            ),
                        ),
                    ],
                },
                ret_ty: Atom(
                    Int,
                ),
                vars: [
                    (
                        Array(
                            Int,
                        ),
                        "a",
                    ),
                    (
                        Atom(
                            Int,
                        ),
                        "len",
                    ),
                ],
                decl_stmts: [
                    Stmt(
                        Ret(
                            Some(
                                Binary(
                                    Arith(
                                        Plus,
                                    ),
                                    Binary(
                                        Arith(
                                            Plus,
                                        ),
                                        ArrAccess {
                                            array: Ident(
                                                "a",
                                            ),
                                            idx: Const(
                                                Int(
                                                    0,
                                                ),
                                            ),
                                        },
                                        ArrAccess {
                                            array: Ident(
                                                "a",
                                            ),
                                            idx: Const(
                                                Int(
                                                    1,
                                                ),
                                            ),
                                        },
                                    ),
                                    ArrAccess {
                                        array: Ident(
                                            "a",
                                        ),
                                        idx: Const(
                                            Int(
                                                2,
                                            ),
                                        ),
                                    },
                                ),
                            ),
                        ),
                    ),
                ],
            },
        ),
    ],
}
